--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:St8KaLvUsKf8lsHUC2ipBjFDO+eH4txxP+rrZMq4DG0=
+APP_KEY=base64:4W4eDFowD22eZ8DTcY1LQ2fBNbhBNlTuVcDt3ac8Vso=
 APP_DEBUG=true
-APP_URL=http://muvyr
+APP_URL=https://2672-84-201-246-215.ngrok-free.app/
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
