--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "backpack/logmanager": "^5.0",
         "backpack/medialibrary-uploaders": "^1.0",
         "backpack/theme-tabler": "^1.1",
+        "buzz/laravel-google-captcha": "^2.3",
         "defstudio/telegraph": "^1.38",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
