--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:KQXOG3ftTX+BhtVz5yVyD4yb9WMAKf47s0jS4j5n18U=
+APP_KEY=base64:/uLAX+dr1AeTGhuvsse5aBk5vCpr0U3A4PXVJWBm4ok=
 APP_DEBUG=true
-APP_URL=http://muvyr.test
+APP_URL=http://muvyrchik
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
