--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "buzz/laravel-google-captcha": "^2.3",
         "defstudio/telegraph": "^1.38",
         "guzzlehttp/guzzle": "^7.2",
+        "laravel-notification-channels/telegram": "^4.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
