--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:KQXOG3ftTX+BhtVz5yVyD4yb9WMAKf47s0jS4j5n18U=
 APP_DEBUG=true
-APP_URL=http://muvyrnew.beget.tech
+APP_URL=http://muvarik
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=muvyrnew_db
-DB_USERNAME=muvyrnew_db
-DB_PASSWORD=Ue54%jWB
+DB_DATABASE=db_muvyr
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
