--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:KQXOG3ftTX+BhtVz5yVyD4yb9WMAKf47s0jS4j5n18U=
 APP_DEBUG=true
-APP_URL=http://muvarik
+APP_URL=http://muvendus
 
 LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
